# mail_talker

./: Cargo.toml  README.md
src/: claude.rs  listen.py  mail.rs  main.rs  parse.rs
src/decide/: answer.rs  case.rs  mod.rs
src/llm/: answer.rs  case.rs  eval.rs  mod.rs
