[package]
name = "mail_talker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
native-tls = "0.2.11"
reqwest = { version = "0.11.26", features = ["json", "blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
v_utils = { version = "1.0.5", features = ["llm"] }
