[package]
name = "mail_talker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
lazy_static = "1.4.0"
native-tls = "0.2.11"
reqwest = { version = "0.11.26", features = ["json", "blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
v_utils = { version = "1.0.9", features = ["llm"] }
regex = "1.10.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
